[package]
name = "doxygen-bindgen"
version = "0.1.4"
edition = "2024"
license = "MIT"
authors = ["rich-ayr <rich-ayr@img.ws>"]
repository = "https://github.com/rich-ayr/doxygen-bindgen"
homepage = "https://github.com/rich-ayr/doxygen-bindgen"
description = "Converts Doxygen comments into Rustdoc markdown"

[dependencies]
yap = "0.12.0"
